--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -175,18 +175,18 @@
   list.push("	Villa-36	,,,,,,,");
   list.push("	Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-38	,,,,,,,");
-  list.push("	Villa-39	,Manish Salvi,1000,1000,1000,,,");
+  list.push("	Villa-39	,Manish Salvi,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-40	,,,,,,,");
   list.push("	Villa-41	,,,,,,,");
-  list.push("	Villa-42	,Prakash Ji,1000,1000,1000,,,");
-  list.push("	Villa-43	,Arun Tripathi,1000,1000,1000,,,");
+  list.push("	Villa-42	,Prakash Ji,1000,1000,1000,1000,1000,1000");
+  list.push("	Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-44	,Ravindra Verma,1000,1000,1000,,,,");
   list.push("	Villa-45	,Nand Singh Rajawat,1000,1000,1000,,,");
   list.push("	Villa-46	,Vikas Mahala,1000,1000,1000,,,");
   list.push("	Villa-47	,Manoj Ji,1000,1000,1000,,,");
   list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
   list.push("	Villa-49	,,,,,,,");
-  list.push("	Villa-50	,Ankit Garg,1000,1000,1000,,,");
+  list.push("	Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-51	,Jatin Kumar,1000,1000,1000,,,");
   list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,,,");
   list.push("	Villa-53	,Rohit Jain,1000,1000,1000,,,");
