--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -155,7 +155,7 @@
      list.push("Villa-46,@Vikas Mahala,@8561811965,@2,@Owner"); 
      list.push("Villa-47,@Manoj Ji,@9460070338,@4,@Owner"); 
      list.push("Villa-48,@R C Sharma ,@7737061033,@3,@Owner"); 
-     list.push("Villa-50,@Ankit Garg,@9785352955,@3,@Owner"); 
+     list.push("Villa-50,@Abhishek Garg,@9785352955,@3,@Owner"); 
      list.push("Villa-51,@Jatin Kumar,@,@3,@Owner"); 
      list.push("Villa-52,@Shailesh Bansal,@9461856524,@4,@Owner"); 
      list.push("Villa-53,@Rohit Jain,@9828576337,@4,@Owner"); 
