--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -188,7 +188,7 @@
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-51	,Jatin Kumar,1000,1000,1000,,,");
-  list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,,,");
+  list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-53	,Rohit Jain,1000,1000,1000,,,");
   list.push("	Villa-54	,,,,,,,");
   list.push("	Villa-55	,,,,,,,");
