--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -203,7 +203,7 @@
   list.push("	Villa-62	,,,,,,,");
   list.push("	Villa-63	,Yogesh Ji,500,500,500,,,");
   list.push("	Villa-64	,Sahil Meghnani,500,500,500,,,");
-  list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,,,");
+  list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,500,500,500");
   list.push("	Villa-66	,,,,,,,");
   list.push("	Villa-67	,Abhishek Jaiman,500,500,500,,,");
   list.push("	Villa-68	,Shrish Jaiman,500,500,500,,,");
