--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -198,7 +198,7 @@
   list.push("	Villa-59	,,,,,,,");
   list.push("	Villa-60	,,,,,,,");
   list.push("	Villa-61	,,,,,,,");
-  list.push("	Villa-62	,,,,,,,");
+  list.push("	Villa-62	,Lal Singh,0,0,0,1000,1000,1000");
   list.push("	Villa-63	,Yogesh Ji,,,,,,");
   list.push("	Villa-64	,Sahil Meghnani,,,,,,");
   list.push("	Villa-65	,Jalaj Rajpurohit,1000,1000,1000,,,");
