--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -159,6 +159,7 @@
      list.push("Villa-51,@Jatin Kumar,@,@3,@Owner"); 
      list.push("Villa-52,@Shailesh Bansal,@9461856524,@4,@Owner"); 
      list.push("Villa-53,@Rohit Jain,@9828576337,@4,@Owner"); 
+     list.push("Villa-62,@Lal Singh,@,@2,@Owner"); 
      list.push("Villa-63,@Yogesh Ji,@8583956466,@4,@Owner"); 
      list.push("Villa-64,@Sahil Meghnani,@9929080804,@2,@Owner");
      list.push("Villa-65,@Jalaj Rajpurohit,@9820684534,@5,@Owner");
