--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -68,6 +68,9 @@
                 <h4 style="color:darkgreen">  Cash Amount at Villa No. 45 </h4>
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
+
+                <a class="image-link" href="D:\Jalaj\SourcCode\ShubhVilla\img\WebPageUnderConstruction.jpg"><img src="D:\Jalaj\SourcCode\ShubhVilla\img\ClickHere.jpg"></a>
+
 				<fieldset>
                     <label for="Name">Select Year</label>
 				   <select id="YearSelection" onChange="return displayTableData()" class="form-control"></select>
