--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -69,7 +69,7 @@
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
 
-                <a class="image-link" href="D:\Jalaj\SourcCode\ShubhVilla\img\WebPageUnderConstruction.jpg"><img src="D:\Jalaj\SourcCode\ShubhVilla\img\ClickHere.jpg"></a>
+                <a class="image-link" href="img/WebPageUnderConstruction.jpg"><img src="img/ClickHere.jpg"></a>
 
 				<fieldset>
                     <label for="Name">Select Year</label>
