--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -67,9 +67,12 @@
                 <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
                 <h4 style="color:darkgreen">  Cash Amount at Villa No. 45 </h4>
                 <br>
+                <h4 style="color:darkgreen">  Jan-Feb-Mar 2023 Balance = 1,29,000  </h4>
+                <a class="image-link" href="img/WebPageUnderConstruction.jpg"><img src="img/ClickHere.jpg"></a>
+
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
 
-                <a class="image-link" href="img/WebPageUnderConstruction.jpg"><img src="img/ClickHere.jpg"></a>
+              
 
 				<fieldset>
                     <label for="Name">Select Year</label>
