--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -68,7 +68,7 @@
                 <h4 style="color:darkgreen">  Cash Amount at Villa No. 45 </h4>
                 <br>
                 <h4 style="color:darkgreen">  Jan-Feb-Mar 2023 Balance = 1,29,000  </h4>
-                <a class="image-link" href="img/WebPageUnderConstruction.jpg"><img src="img/ClickHere.jpg"></a>
+                <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
 
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
 
@@ -154,7 +154,7 @@
   list.push("	Villa-9	,Raghvendra Sharma,1000,1000,1000,,,");
   list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,,,");
   list.push("	Villa-11	,Sundeep Mahala,1000,1000,1000,,,");
-  list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,,,");
+  list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-13	,Anil Sharma,1000,1000,1000,,,");
   list.push("	Villa-14	,R K Shandilya,1000,1000,1000,,,");
   list.push("	Villa-15	,,,,,,,");
@@ -188,7 +188,7 @@
   list.push("	Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-44	,Ravindra Verma,1000,1000,1000,,,,");
   list.push("	Villa-45	,Nand Singh Rajawat,1000,1000,1000,,,");
-  list.push("	Villa-46	,Vikas Mahala,1000,1000,1000,,,");
+  list.push("	Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-47	,Manoj Ji,1000,1000,1000,,,");
   list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
   list.push("	Villa-49	,,,,,,,");
