--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -176,7 +176,7 @@
   list.push("	Villa-31	,,,,,,,");
   list.push("	Villa-32	,Vaibhav Tomar,1000,1000,1000,,,");
   list.push("	Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-34	,Vijay Meena,1000,1000,1000,,,");
+  list.push("	Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-35	,,,,,,,");
   list.push("	Villa-36	,,,,,,,");
   list.push("	Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000");
@@ -228,7 +228,7 @@
   list.push("	Villa-83	,,,,,,,");
   list.push("	Villa-84	,,,,,,,");
   list.push("	Villa-85	,Pradeep Verma,1000,1000,1000,,,");
-  list.push("	Villa-86	,Surendra Agrawal,1000,1000,1000,,,");
+  list.push("	Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-87	,Devendra Singh,,,,,,");
   list.push("	Villa-88	,Pankaj Chauhan,1000,1000,1000,,,");
   list.push("	Villa-89	,,,,,,,");
