--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -155,7 +155,7 @@
   list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,,,");
   list.push("	Villa-11	,Sundeep Mahala,1000,1000,1000,,,");
   list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-13	,Anil Sharma,1000,1000,1000,,,");
+  list.push("	Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-14	,R K Shandilya,1000,1000,1000,,,");
   list.push("	Villa-15	,,,,,,,");
   list.push("	Villa-16	,,,,,,,");
