--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -186,7 +186,7 @@
   list.push("	Villa-41	,,,,,,,");
   list.push("	Villa-42	,Prakash Ji,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-44	,Ravindra Verma,1000,1000,1000,,,,");
+  list.push("	Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-45	,Nand Singh Rajawat,1000,1000,1000,,,");
   list.push("	Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-47	,Manoj Ji,1000,1000,1000,,,");
