--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<p style="color: rgb(6, 151, 38)">Society Meeting date: 12 May 2023, 8:30 PM </p>
+							<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
 							<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--                              <p style="color:red">  Holi Celebration:  </p> -->
 							<!--                             <p>   10th March 2020 (09:00 AM)  </p> -->
