--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -146,7 +146,7 @@
   list.push("	Villa-1	,,,,,,,");
   list.push("	Villa-2	,,,,,,,");
   list.push("	Villa-3	,,,,,,,");
-  list.push("	Villa-4	,Bhupesh Saini,1000,1000,1000,,,");
+  list.push("	Villa-4	,Bhupesh Saini,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-5	,Shishir Maltiyar,1000,1000,1000,,,");
   list.push("	Villa-6	,,,,,,,");
   list.push("	Villa-7	,Rahul Pandey,1000,1000,1000,1000,1000,1000");
@@ -170,7 +170,7 @@
   list.push("	Villa-25	,,,,,,,");
   list.push("	Villa-26	,Rakesh Kumar,1000,1000,1000,,,");
   list.push("	Villa-27	,Deepesh Sharma,1000,1000,1000,,,");
-  list.push("	Villa-28	,Mohit Juneja,1000,1000,1000,,,");
+  list.push("	Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-29	,,,,,,,");
   list.push("	Villa-30	,,,,,,,");
   list.push("	Villa-31	,,,,,,,");
@@ -207,7 +207,7 @@
   list.push("	Villa-62	,Lal Singh,0,0,0,1000,1000,1000");
   list.push("	Villa-63	,Yogesh Ji,,,,,,");
   list.push("	Villa-64	,Sahil Meghnani,,,,,,");
-  list.push("	Villa-65	,Jalaj Rajpurohit,1000,1000,1000,,,");
+  list.push("	Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-66	,,,,,,,");
   list.push("	Villa-67	,Abhishek Jaiman,1000,1000,1000,,,");
   list.push("	Villa-68	,Shrish Jaiman,1000,1000,1000,,,");
