--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -168,7 +168,7 @@
   list.push("	Villa-23	,,,,,,,");
   list.push("	Villa-24	,Abhimanyu Saraswat,1000,1000,1000,,,");
   list.push("	Villa-25	,,,,,,,");
-  list.push("	Villa-26	,Rakesh Kumar,1000,1000,1000,,,");
+  list.push("	Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-27	,Deepesh Sharma,1000,1000,1000,,,");
   list.push("	Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-29	,,,,,,,");
@@ -195,7 +195,7 @@
   list.push("	Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-51	,Jatin Kumar,1000,1000,1000,,,");
   list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-53	,Rohit Jain,1000,1000,1000,,,");
+  list.push("	Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-54	,,,,,,,");
   list.push("	Villa-55	,,,,,,,");
   list.push("	Villa-56	,,,,,,,");
