--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -147,12 +147,12 @@
   list.push("	Villa-2	,,,,,,,");
   list.push("	Villa-3	,,,,,,,");
   list.push("	Villa-4	,Bhupesh Saini,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-5	,Shishir Maltiyar,1000,1000,1000,,,");
+  list.push("	Villa-5	,Shishir Maltiyar,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-6	,,,,,,,");
   list.push("	Villa-7	,Rahul Pandey,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-8	,,,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,1000,1000,1000,,,");
-  list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,,,");
+  list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-11	,Sundeep Mahala,1000,1000,1000,,,");
   list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000");
@@ -209,11 +209,11 @@
   list.push("	Villa-64	,Sahil Meghnani,,,,,,");
   list.push("	Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-66	,,,,,,,");
-  list.push("	Villa-67	,Abhishek Jaiman,1000,1000,1000,,,");
-  list.push("	Villa-68	,Shrish Jaiman,1000,1000,1000,,,");
-  list.push("	Villa-69	,Piyush Sharma,1000,1000,1000,,,");
-  list.push("	Villa-70	,Vineet Sharma,1000,1000,1000,,,");
-  list.push("	Villa-71	,Suresh kumar Sharma,1000,1000,1000,,,");
+  list.push("	Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000");
+  list.push("	Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000");
+  list.push("	Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000");
+  list.push("	Villa-70	,Vineet Sharma,1000,1000,1000,1000,1000,1000");
+  list.push("	Villa-71	,Suresh kumar Sharma,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-72	,Nikesh Chaudhary,1000,1000,1000,,,");
   list.push("	Villa-73	,Richa Sharma,1000,1000,1000,,,");
   list.push("	Villa-74	,,,,,,,");
