--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -164,7 +164,7 @@
   list.push("	Villa-23	,,,,,,,");
   list.push("	Villa-24	,Abhimanyu Saraswat,500,500,500,,,");
   list.push("	Villa-25	,,,,,,,");
-  list.push("	Villa-26	,Rakesh Kumar,500,500,500,,,");
+  list.push("	Villa-26	,Rakesh Kumar,500,500,500,500,500,500");
   list.push("	Villa-27	,Deepesh Sharma,,,,,,");
   list.push("	Villa-28	,Mohit Juneja,500,500,500,,,");
   list.push("	Villa-29	,,,,,,,");
