--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -174,7 +174,7 @@
   list.push("	Villa-29	,,,,,,,");
   list.push("	Villa-30	,,,,,,,");
   list.push("	Villa-31	,,,,,,,");
-  list.push("	Villa-32	,Vaibhav Tomar,1000,1000,1000,,,");
+  list.push("	Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-35	,,,,,,,");
