--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -143,7 +143,7 @@
      list.push("Villa-26,@Rakesh Kumar,@9079205061,@3,@Owner"); 
      list.push("Villa-27,@Deepesh Sharma,@9829192929,@3,@Owner"); 
      list.push("Villa-28,@Mohit Juneja,@7014643282,@4,@Owner"); 
-     list.push("Villa-32,@Vaibhav Tomar,@9560055323,@3,@Owner"); 
+     list.push("Villa-32,@Peeyush Verma,@9560055323,@3,@Owner"); 
      list.push("Villa-33,@Prakash Joshi,@8128028832,@2,@Owner"); 
      list.push("Villa-34,@Vijay Meena,@9667392585,@3,@Owner"); 
      list.push("Villa-37,@Gajendra Sharma,@9166122226,@5,@Owner"); 
