--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -145,7 +145,7 @@
   list.push("	Villa-4	,Bhupesh Saini,500,500,500,,,");
   list.push("	Villa-5	,Shishir Maltiyar,500,500,500,,,");
   list.push("	Villa-6	,,,,,,,");
-  list.push("	Villa-7	,Rahul Pandey,500,500,500,,,");
+  list.push("	Villa-7	,Rahul Pandey,500,500,500,500,500,500");
   list.push("	Villa-8	,,,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
   list.push("	Villa-10	,Jogendra Sachdeva,500,500,500,,,");
