--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -170,7 +170,7 @@
   list.push("	Villa-29	,,,,,,,");
   list.push("	Villa-30	,,,,,,,");
   list.push("	Villa-31	,,,,,,,");
-  list.push("	Villa-32	,Vaibhav Tomar,500,500,500,,,");
+  list.push("	Villa-32	,Peeyush Verma,500,500,500,,,");
   list.push("	Villa-33	,Prakash Joshi,500,500,500,,,");
   list.push("	Villa-34	,Vijay Meena,500,500,500,,,");
   list.push("	Villa-35	,,,,,,,");
