--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -230,7 +230,7 @@
   list.push("	Villa-85	,Pradeep Verma,1000,1000,1000,,,");
   list.push("	Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-87	,Devendra Singh,,,,,,");
-  list.push("	Villa-88	,Pankaj Chauhan,1000,1000,1000,,,");
+  list.push("	Villa-88	,Pankaj Chauhan,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-89	,,,,,,,");
   list.push("	Villa-90	,,,,,,,");
   list.push("	Villa-91	,,,,,,,");
