--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
 	   
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Event: Upcoming event, Van mahotsav: Tree plantation in Shubh Villa on 2nd July 2023 </p>
+		<p> Event: Upcoming event, Van mahotsav: Tree plantation in Shubh Villa on 9th July 2023 </p>
    </marquee>
     <!--
    <marquee behavior="slide" direction="left">
@@ -204,7 +204,7 @@
 					<p style="color: rgb(6, 151, 38)">3.	Mahashivaratri: Mandir decoration and Pooja </p>
 					<p style="color: rgb(151, 6, 83)">4.	Holi Milan: Combined Holi celebration (Color and Thandai to be arranged by cultural committee)+Dinner+ DJ</p>
 					<p style="color: rgb(6, 151, 38)">5.	Ramnavmi Chetra: decoration and panchamrat and dona prasadi</p>
-					<p style="color: rgb(6, 151, 38)">6.	Van mahotsav : Tree plantation by kids in colony aur near by area in first week of July</p>
+					<p style="color: rgb(6, 151, 38)">6.	Van mahotsav : Tree plantation by kids in colony aur near by area in First/Second week of July</p>
 					<p style="color: rgb(6, 151, 38)">7.	Janmashtami : Mandir decoration +Panchaarat and dona prasadi</p>
 					<p style="color: rgb(6, 151, 38)">8.	Independence day: Flag hoisting and laddu distribution</p>
 					<p style="color: rgb(6, 151, 38)">9.	Ganesh Chaturthi : Ganesh Sthapna for 1 day and visarjan with DJ</p>
