--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -162,11 +162,11 @@
   list.push("	Villa-17	,,,,,,,");
   list.push("	Villa-18	,,,,,,,");
   list.push("	Villa-19	,Hitesh Ji,1000,1000,1000,,,");
-  list.push("	Villa-20	,Ved Prakash Parashar,1000,1000,1000,,,");
+  list.push("	Villa-20	,Ved Prakash Parashar,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-21	,,,,,,,");
   list.push("	Villa-22	,,,,,,,");
   list.push("	Villa-23	,,,,,,,");
-  list.push("	Villa-24	,Abhimanyu Saraswat,1000,1000,1000,,,");
+  list.push("	Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-25	,,,,,,,");
   list.push("	Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-27	,Deepesh Sharma,1000,1000,1000,,,");
@@ -187,7 +187,7 @@
   list.push("	Villa-42	,Prakash Ji,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-45	,Nand Singh Rajawat,1000,1000,1000,,,");
+  list.push("	Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
