--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -190,7 +190,7 @@
   list.push("	Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
+  list.push("	Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000");
