--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -99,6 +99,7 @@
 		<th>Apr</th>
 		<th>May</th>
 		<th>Jun</th>
+		<th>Jul</th>
 	</thead>
 	<tbody></tbody>
 	</table>
@@ -139,106 +140,106 @@
 
 	function getYear2023(){
 	 var list = [];
-  list.push("	Villa-1	,,,,,,,");
-  list.push("	Villa-2	,,,,,,,");
-  list.push("	Villa-3	,,,,,,,");
-  list.push("	Villa-4	,Bhupesh Saini,500,500,500,,,");
-  list.push("	Villa-5	,Shishir Maltiyar,500,500,500,,,");
-  list.push("	Villa-6	,,,,,,,");
-  list.push("	Villa-7	,Rahul Pandey,500,500,500,500,500,500");
-  list.push("	Villa-8	,,,,,,,");
-  list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
-  list.push("	Villa-10	,Jogendra Sachdeva,500,500,500,,,");
-  list.push("	Villa-11	,Sundeep Mahala,500,500,500,,,");
-  list.push("	Villa-12	,Gaurav Kothari,500,500,500,,,");
-  list.push("	Villa-13	,Anil Sharma,500,500,500,,,");
-  list.push("	Villa-14	,,,,,,,");
-  list.push("	Villa-15	,,,,,,,");
-  list.push("	Villa-16	,,,,,,,");
-  list.push("	Villa-17	,,,,,,,");
-  list.push("	Villa-18	,,,,,,,");
-  list.push("	Villa-19	,Hitesh Ji,,,,,,");
-  list.push("	Villa-20	,Ved Prakash Parashar,500,500,500,,,");
-  list.push("	Villa-21	,,,,,,,");
-  list.push("	Villa-22	,,,,,,,");
-  list.push("	Villa-23	,,,,,,,");
-  list.push("	Villa-24	,Abhimanyu Saraswat,500,500,500,,,");
-  list.push("	Villa-25	,,,,,,,");
-  list.push("	Villa-26	,Rakesh Kumar,500,500,500,500,500,500");
-  list.push("	Villa-27	,Deepesh Sharma,,,,,,");
-  list.push("	Villa-28	,Mohit Juneja,500,500,500,,,");
-  list.push("	Villa-29	,,,,,,,");
-  list.push("	Villa-30	,,,,,,,");
-  list.push("	Villa-31	,,,,,,,");
-  list.push("	Villa-32	,Peeyush Verma,500,500,500,,,");
-  list.push("	Villa-33	,Prakash Joshi,500,500,500,,,");
-  list.push("	Villa-34	,Vijay Meena,500,500,500,,,");
-  list.push("	Villa-35	,,,,,,,");
-  list.push("	Villa-36	,,,,,,,");
-  list.push("	Villa-37	,Gajendra Sharma,500,500,500,500,500,500");
-  list.push("	Villa-38	,,,,,,,");
-  list.push("	Villa-39	,Manish Salvi,500,500,500,500,500,500");
-  list.push("	Villa-40	,,,,,,,");
-  list.push("	Villa-41	,,,,,,,");
-  list.push("	Villa-42	,Prakash Ji,500,500,500,,,");
-  list.push("	Villa-43	,Arun Tripathi,500,500,500,500,500,500");
-  list.push("	Villa-44	,Ravindra Verma,500,500,500,,,,");
-  list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,");
-  list.push("	Villa-46	,Vikas Mahala,500,500,500,,,");
-  list.push("	Villa-47	,Manoj Ji,500,500,500,,,");
-  list.push("	Villa-48	,R C Sharma,500,500,500,,,");
-  list.push("	Villa-49	,,,,,,,");
-  list.push("	Villa-50	,Abhishek Garg,500,500,500,,,");
-  list.push("	Villa-51	,Jatin Kumar,500,500,500,,,");
-  list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,");
-  list.push("	Villa-53	,Rohit Jain,500,500,500,,,");
-  list.push("	Villa-54	,,,,,,,");
-  list.push("	Villa-55	,,,,,,,");
-  list.push("	Villa-56	,,,,,,,");
-  list.push("	Villa-57	,,,,,,,");
-  list.push("	Villa-58	,,,,,,,");
-  list.push("	Villa-59	,,,,,,,");
-  list.push("	Villa-60	,,,,,,,");
-  list.push("	Villa-61	,,,,,,,");
-  list.push("	Villa-62	,Lal Singh,0,0,0,,,");
-  list.push("	Villa-63	,Yogesh Ji,500,500,500,,,");
-  list.push("	Villa-64	,Sahil Meghnani,500,500,500,,,");
-  list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,500,500,500");
-  list.push("	Villa-66	,,,,,,,");
-  list.push("	Villa-67	,Abhishek Jaiman,500,500,500,,,");
-  list.push("	Villa-68	,Shrish Jaiman,500,500,500,,,");
-  list.push("	Villa-69	,Piyush Sharma,500,500,500,,,");
-  list.push("	Villa-70	,Vineet Sharma,500,500,500,,,");
-  list.push("	Villa-71	,Suresh kumar Sharma,500,500,500,,,");
-  list.push("	Villa-72	,Nikesh Chaudhary,500,500,500,,,");
-  list.push("	Villa-73	,Richa Sharma,500,500,500,,,");
-  list.push("	Villa-74	,,,,,,,");
-  list.push("	Villa-75	,,,,,,,");
-  list.push("	Villa-76	,S N Nagal,500,500,500,,,");
-  list.push("	Villa-77	,,,,,,,");
-  list.push("	Villa-78	,,,,,,,");
-  list.push("	Villa-79	,,,,,,,");
-  list.push("	Villa-80	,,,,,,,");
-  list.push("	Villa-81	,,,,,,,");
-  list.push("	Villa-82	,,,,,,,");
-  list.push("	Villa-83	,,,,,,,");
-  list.push("	Villa-84	,,,,,,,");
-  list.push("	Villa-85	,Pradeep Verma,500,500,500,,,");
-  list.push("	Villa-86	,Surendra Agrawal,500,500,500,,,");
-  list.push("	Villa-87	,Devendra Singh,500,500,500,,,");
-  list.push("	Villa-88	,Pankaj Chauhan,500,500,500,500,500,500");
-  list.push("	Villa-89	,,,,,,,");
-  list.push("	Villa-90	,,,,,,,");
-  list.push("	Villa-91	,,,,,,,");
-  list.push("	Villa-92	,,,,,,,");
-  list.push("	Villa-93	,,,,,,,");
-  list.push("	Villa-94	,,,,,,,");
-  list.push("	Villa-95	,,,,,,,");
-  list.push("	Villa-96	,,,,,,,");
-  list.push("	Villa-97	,,,,,,,");
-  list.push("	Villa-98	,,,,,,,");
-  list.push("	Villa-99	,,,,,,,");
-  list.push("	Villa-100	,,,,,,,");
+  list.push("	Villa-1	,,,,,,,,");
+  list.push("	Villa-2	,,,,,,,,");
+  list.push("	Villa-3	,,,,,,,,");
+  list.push("	Villa-4	,Bhupesh Saini,500,500,500,,,,");
+  list.push("	Villa-5	,Shishir Maltiyar,500,500,500,,,,");
+  list.push("	Villa-6	,,,,,,,,");
+  list.push("	Villa-7	,Rahul Pandey,500,500,500,500,500,500,-1500");
+  list.push("	Villa-8	,,,,,,,,");
+  list.push("	Villa-9	,Raghvendra Sharma,,,,,,,");
+  list.push("	Villa-10	,Jogendra Sachdeva,500,500,500,,,,");
+  list.push("	Villa-11	,Sundeep Mahala,500,500,500,,,,");
+  list.push("	Villa-12	,Gaurav Kothari,500,500,500,,,,");
+  list.push("	Villa-13	,Anil Sharma,500,500,500,,,,");
+  list.push("	Villa-14	,,,,,,,,");
+  list.push("	Villa-15	,,,,,,,,");
+  list.push("	Villa-16	,,,,,,,,");
+  list.push("	Villa-17	,,,,,,,,");
+  list.push("	Villa-18	,,,,,,,,");
+  list.push("	Villa-19	,Hitesh Ji,,,,,,,");
+  list.push("	Villa-20	,Ved Prakash Parashar,500,500,500,,,,");
+  list.push("	Villa-21	,,,,,,,,");
+  list.push("	Villa-22	,,,,,,,,");
+  list.push("	Villa-23	,,,,,,,,");
+  list.push("	Villa-24	,Abhimanyu Saraswat,500,500,500,,,,");
+  list.push("	Villa-25	,,,,,,,,");
+  list.push("	Villa-26	,Rakesh Kumar,500,500,500,500,500,500,-1500");
+  list.push("	Villa-27	,Deepesh Sharma,,,,,,,");
+  list.push("	Villa-28	,Mohit Juneja,500,500,500,,,,");
+  list.push("	Villa-29	,,,,,,,,");
+  list.push("	Villa-30	,,,,,,,,");
+  list.push("	Villa-31	,,,,,,,,");
+  list.push("	Villa-32	,Peeyush Verma,500,500,500,,,,");
+  list.push("	Villa-33	,Prakash Joshi,500,500,500,,,,");
+  list.push("	Villa-34	,Vijay Meena,500,500,500,,,,");
+  list.push("	Villa-35	,,,,,,,,");
+  list.push("	Villa-36	,,,,,,,,");
+  list.push("	Villa-37	,Gajendra Sharma,500,500,500,500,500,500,-1500");
+  list.push("	Villa-38	,,,,,,,,");
+  list.push("	Villa-39	,Manish Salvi,500,500,500,500,500,500,-1500");
+  list.push("	Villa-40	,,,,,,,,");
+  list.push("	Villa-41	,,,,,,,,");
+  list.push("	Villa-42	,Prakash Ji,500,500,500,,,,");
+  list.push("	Villa-43	,Arun Tripathi,500,500,500,500,500,500,-1500");
+  list.push("	Villa-44	,Ravindra Verma,500,500,500,,,,,");
+  list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,,");
+  list.push("	Villa-46	,Vikas Mahala,500,500,500,,,,");
+  list.push("	Villa-47	,Manoj Ji,500,500,500,,,,");
+  list.push("	Villa-48	,R C Sharma,500,500,500,,,,");
+  list.push("	Villa-49	,,,,,,,,");
+  list.push("	Villa-50	,Abhishek Garg,500,500,500,,,,");
+  list.push("	Villa-51	,Jatin Kumar,500,500,500,,,,");
+  list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,,");
+  list.push("	Villa-53	,Rohit Jain,500,500,500,,,,");
+  list.push("	Villa-54	,,,,,,,,");
+  list.push("	Villa-55	,,,,,,,,");
+  list.push("	Villa-56	,,,,,,,,");
+  list.push("	Villa-57	,,,,,,,,");
+  list.push("	Villa-58	,,,,,,,,");
+  list.push("	Villa-59	,,,,,,,,");
+  list.push("	Villa-60	,,,,,,,,");
+  list.push("	Villa-61	,,,,,,,,");
+  list.push("	Villa-62	,Lal Singh,0,0,0,,,,,");
+  list.push("	Villa-63	,Yogesh Ji,500,500,500,,,,");
+  list.push("	Villa-64	,Sahil Meghnani,500,500,500,,,,");
+  list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,500,500,500,-1500");
+  list.push("	Villa-66	,,,,,,,,");
+  list.push("	Villa-67	,Abhishek Jaiman,500,500,500,,,,");
+  list.push("	Villa-68	,Shrish Jaiman,500,500,500,,,,");
+  list.push("	Villa-69	,Piyush Sharma,500,500,500,,,,");
+  list.push("	Villa-70	,Vineet Sharma,500,500,500,,,,");
+  list.push("	Villa-71	,Suresh kumar Sharma,500,500,500,,,,");
+  list.push("	Villa-72	,Nikesh Chaudhary,500,500,500,,,,");
+  list.push("	Villa-73	,Richa Sharma,500,500,500,,,,");
+  list.push("	Villa-74	,,,,,,,,");
+  list.push("	Villa-75	,,,,,,,,");
+  list.push("	Villa-76	,S N Nagal,500,500,500,,,,");
+  list.push("	Villa-77	,,,,,,,,");
+  list.push("	Villa-78	,,,,,,,,");
+  list.push("	Villa-79	,,,,,,,,");
+  list.push("	Villa-80	,,,,,,,,");
+  list.push("	Villa-81	,,,,,,,,");
+  list.push("	Villa-82	,,,,,,,,");
+  list.push("	Villa-83	,,,,,,,,");
+  list.push("	Villa-84	,,,,,,,,");
+  list.push("	Villa-85	,Pradeep Verma,500,500,500,,,,");
+  list.push("	Villa-86	,Surendra Agrawal,500,500,500,,,,");
+  list.push("	Villa-87	,Devendra Singh,500,500,500,,,,");
+  list.push("	Villa-88	,Pankaj Chauhan,500,500,500,500,500,500,-1500");
+  list.push("	Villa-89	,,,,,,,,");
+  list.push("	Villa-90	,,,,,,,,");
+  list.push("	Villa-91	,,,,,,,,");
+  list.push("	Villa-92	,,,,,,,,");
+  list.push("	Villa-93	,,,,,,,,");
+  list.push("	Villa-94	,,,,,,,,");
+  list.push("	Villa-95	,,,,,,,,");
+  list.push("	Villa-96	,,,,,,,,");
+  list.push("	Villa-97	,,,,,,,,");
+  list.push("	Villa-98	,,,,,,,,");
+  list.push("	Villa-99	,,,,,,,,");
+  list.push("	Villa-100	,,,,,,,,");
 
 
 	 generateTable(list)
@@ -250,7 +251,7 @@ function generateTable(list){
 	var count =1;
 	$(list).each(function(){
 		var val = this.split(",");
-		var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td>"+val[3]+"</td><td>"+val[4]+"</td><td>"+val[5]+"</td><td>"+val[6]+"</td><td>"+val[7]+"</td></tr>";
+		var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td>"+val[3]+"</td><td>"+val[4]+"</td><td>"+val[5]+"</td><td>"+val[6]+"</td><td>"+val[7]+"</td><td>"+val[8]+"</td></tr>";
 		$("#displayTableDetails").append(tr);
 		count++;
 	});
@@ -293,7 +294,9 @@ $(document).ready(function(){
                 sumVal = sumVal + parseInt(cells[i].innerHTML)
                 }
             }
+            
         }
+        sumVal = sumVal - 10500
         document.getElementById("TotalCollection").innerHTML = sumVal;
     }
 </script>
