--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
-							<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
-							<!--                              <p style="color:red">  Holi Celebration:  </p> -->
+							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>-->
+							 <p style="color: red">Next Meeting date not decided yet.</p> 
+							<!--                              <p style="color:red">  Holi Celebration:  </p> 
 							<!--                             <p>   10th March 2020 (09:00 AM)  </p> -->
 							<!--                             <img src="img/HappyHoli.jpg" "> -->
 							<!--                             <p> </p> -->
