--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							</h2>
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>-->
 							<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
-							 <p style="color: rgb(20, 9, 238)">Next Meeting date, Yet to decide, any of day from 13 or 14 or 15 August (As per per maximum availability).</p> 
+							 <p style="color: rgb(20, 9, 238)">Next Meeting date for RWA, Yet to decide, any of day from 13 or 14 or 15 August (As per per maximum availability).</p> 
 							<!--                              <p style="color:red">  Holi Celebration:  </p> 
 							<!--                             <p>   10th March 2020 (09:00 AM)  </p> -->
 							<!--                             <img src="img/HappyHoli.jpg" "> -->
