--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal) and Thandai will available from cultural team</p>
 		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
 
--->
+
 
         <img class="NO-CACHE" data-src="img/Shiva.png" width="374px" heigt="257px" alt="" style="margin-bottom: 22px;">
 		<p style="color: rgb(246, 72, 34)"><b>  Sahastradhara Abhishek, 13 August 2023 & Independence Day, 15 August 2023   </b></p>
-		<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
-
+		 <p style="color: red">Next Meeting date not decided yet.</p> 
+	-->
 		<section class="our_activity">
 			<div class="container">
 				<div class="row">
@@ -144,11 +144,11 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>-->
-							<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
+							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
+							 <p style="color: red">Next Meeting date not decided yet.</p> 
 							 <p style="color: rgb(20, 9, 238)">Next Meeting date for RWA, Yet to decide, any of day from 13 or 14 or 15 August (As per per maximum availability).</p> 
-							<!--                              <p style="color:red">  Holi Celebration:  </p> 
-							<!--                             <p>   10th March 2020 (09:00 AM)  </p> -->
+							                              <p style="color:red">  Holi Celebration:  </p> 
+							                             <p>   10th March 2020 (09:00 AM)  </p> -->
 							<!--                             <img src="img/HappyHoli.jpg" "> -->
 							<!--                             <p> </p> -->
 
