--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -268,6 +268,7 @@
         list.push("Independence day laddu,Villa 65,-2472,D");
         list.push("Independence day flowers ,Villa 65,-80,D");
         list.push("Independence day meeting tea ,Villa 65,-120,D");
+        list.push("27th August: chair ,Villa 65,-500,D");
          generateTable(list)
          SetBalanceColor();
         
